# ST-SRC-Autopilot

./: .gitignore  .gitmodules  CMakeLists.txt  DRW_WF.drawio  Makefile  README.md
Doc/: HLDR.pptx  Tracker.xlsx
boards/holybro/kakuteh7v2/: default.px4board
cmake/: init.cmake  kconfig.cmake  plat_compiler_flag_config.cmake  plat_config.cmake  platform_config.cmake  px4_add_common_flags.cmake  px4_config.cmake  px4_impl_os.cmake
cmake/nuttx/: CMakeLists.txt
cmake/nuttx/NuttX/: CMakeLists.txt
